gccida/g0/dump_maybe_newline
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_maybe_newline/src/tree-dump.c:626:24: error: use of undeclared identifier 'off_816959'
fprintf( di_0->stream, off_816959, ( unsigned int)( 15 - extra), &unk_816953); 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_maybe_newline/src/tree-dump.c:626:67: error: use of undeclared identifier 'unk_816953'
fprintf( di_0->stream, off_816959, ( unsigned int)( 15 - extra), &unk_816953); 
                                                                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_maybe_newline/src/obj/tree-dump.o] Error 1
